    * mk_postgres plugin: replace select * with list of explicit columns (fix for PG 9.1)
    * lnx_if: show MAC address for interfaces (needs also agent update)
    * winperf_tcp_conn: New check. Displays number of established tcpv4 connections in windows
                        Uses WATO Rule "TCP connection stats (Windows)"

    Notifications:
    * notify.py: unique spoolfiles name no longer created with uuid
    * Warn user if only_services does never match 

    Livestatus:
    * Table statehist: Improved detection of vanished hosts and services.
                       Now able to detect and remove nonsense check plugin output 
    * FIX: able to handle equal comment_id between host and service
    * livestatus.log: show utf-8 decoding problems only with debug logging >=2
    * livestatus: fixed incorrect output formatting of comments_with_info column

    BI:
    * Integrated availability computing, including nifty time warp feature

    WATO:
    * Configuration of datasource programs via dedicated rules
    * New editor for Business Intelligence rules
    * Rule Editor: Now able to show infeffective rules
    * Valuespec: CascadingDropdown now able to process choice values from functions
    * cisco_qos parameters now configurable via WATO
    * Removed global option logwatch_forward_to_ec, moved this to the
      logwatch_ec ruleset. With this option the forwarding can now be enabled
      for each logfile on a host
    * Configuration of an alternativ host check command
    * Inventory: Display link symbol for ps ruleset
    * FIX: Rulesets: correct display of rules within subfolders


1.2.2p2:
    Checks & Agents:
    * FIX: jolokia_info: ignore ERROR instances
    * FIX: apache_status: use (also) apache_status.cfg instead of apache_status.conf
    * FIX: f5_bigip_vserver: fix wrong OID (13 instead of 1), thanks to Miro Ramza
    * FIX: f5_bigip_psu: handle more than first power supply, thanks to Miro Ramza