@@ -26,6 +26,7 @@
     # Select counters to extract. The following counters
     # are needed by checks shipped with check_mk.
     # counters = 10332:msx_queues
+    # counters = 638:tcp_conn
 
 
 [logfiles]
