@@ -98,6 +98,7 @@
     * lnx_if: show MAC address for interfaces (needs also agent update)
     * winperf_tcp_conn: New check. Displays number of established tcpv4 connections in windows
                         Uses WATO Rule "TCP connection stats (Windows)"
+    * windows_agent: fixed timeouts for powershell scripts in local/plugins
 
     Notifications:
     * notify.py: unique spoolfiles name no longer created with uuid
